--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.16",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/redux-form": "^8.3.3",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
